(lang dune 3.21)

(name OLith)

(generate_opam_files true)

(source
 (github sambokena513/OLith))

(authors "Ofenbauer <sambokena@mail.com>")

(maintainers "Ofenbauer <sambokena@mail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name OLith)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
